re-wrote the NEO objects into one component

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,19 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.Asteroid:hover {
+  cursor: pointer;
+}
+
+.Asteroid {
+  cursor: default;
+}
+
+.neo_descript{
+  transform: unset!important;
+  padding: 50px;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
