Updated Asteroid to use state and not re-render on click, changed details to use state instead of dom modification

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,10 @@ button:focus-visible {
   padding: 50px;
 }
 
+.a-details button {
+  max-height: 44px;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
