--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 @font-face {
-  font-family: 'Venite';
-  src: local('Venite'), url(/fonts/VeniteAdoremus-rgRBA.ttf) format('truetype');
+  font-family: "Venite";
+  src: local("Venite"), url(/fonts/VeniteAdoremus-rgRBA.ttf) format("truetype");
 }
-
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -62,7 +61,7 @@ input[type="range"]::-webkit-slider-thumb {
   margin-top: -12px; /* Centers thumb on the track */
   background-color: #5cd5eb;
   height: 2rem;
-  width: .7rem;    
+  width: 0.7rem;
 }
 
 /***** Thumb Styles *****/
@@ -72,7 +71,7 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 0; /*Removes default border-radius that FF applies*/
   background-color: #5cd5eb;
   height: 2rem;
-  width: .7rem;
+  width: 0.7rem;
 }
 
 /***** Focus Styles *****/
@@ -92,7 +91,7 @@ input[type="range"]:focus::-webkit-slider-thumb {
 input[type="range"]:focus::-moz-range-thumb {
   border: 1px solid #053a5f;
   outline: 3px solid #053a5f;
-  outline-offset: 0.125rem;     
+  outline-offset: 0.125rem;
 }
 
 a {
@@ -154,13 +153,13 @@ button:focus-visible {
   transform: unset;
   font-family: Venite;
   width: 500px;
-  background-color: rgba(90,90,90, 1);
+  background-color: rgba(90, 90, 90, 1);
   border-radius: 15px;
   z-index: 99999;
-  left: 0; 
-  right: 0; 
-  margin-left: auto; 
-  margin-right: auto; 
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .a-details button {
@@ -177,17 +176,17 @@ button:focus-visible {
 .hud-transform-unset {
   transform: unset !important;
   padding: 20px;
-  z-index: 100000000!important; /* obscenely large z-index to override the built in three fiber dynamic z-index*/
+  z-index: 100000000 !important; /* obscenely large z-index to override the built in three fiber dynamic z-index*/
 }
 
 .date-label {
-  bottom: 200px!important;
-  top: unset!important;
+  bottom: 200px !important;
+  top: unset !important;
   margin-left: auto;
   margin-right: auto;
   left: 0 !important;
   right: 0 !important;
-  font-family: 'Venite';
+  font-family: "Venite";
   text-align: center;
   width: 400px;
 }
@@ -204,9 +203,9 @@ button:focus-visible {
 }
 
 .pan-label {
-  bottom: 170px!important;
-  top: unset!important;
-  left: unset!important;
+  bottom: 170px !important;
+  top: unset !important;
+  left: unset !important;
   right: 13vw;
 }
 
@@ -214,12 +213,27 @@ button:focus-visible {
   font-family: Venite;
   color: #5cd5eb;
   position: absolute;
-  -webkit-text-stroke-width: .5px;
+  -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: Black;
   font-size: 20px;
-  z-index: 10!important;
+  z-index: 10 !important;
 }
 
+.info-wrapper {
+  top: unset !important;
+  bottom: 100px !important;
+}
+
+.info-overlay {
+  top: unset !important;
+  bottom: 400px !important;
+  width: 300px;
+}
+
+.info-overlay div {
+  background-color: rgba(255, 255, 255, 0.03);
+  padding: 10px;
+}
 /* Loading Spinner */
 
 .loading-overlay {
@@ -256,7 +270,6 @@ button:focus-visible {
   color: white;
 }
 
-
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -270,25 +283,24 @@ button:focus-visible {
   }
 }
 
-
 @media only screen and (max-width: 800px) {
-  .a-details{
-    width: 300px!important;
+  .a-details {
+    width: 300px !important;
     font-size: 16px;
   }
-  .date-label{
+  .date-label {
     width: 200px;
     margin-left: auto;
     margin-right: auto;
     left: 0 !important;
     right: 0 !important;
   }
-  .date-label  div div{
-    font-family: 'Venite';
+  .date-label div div {
+    font-family: "Venite";
     text-align: center;
-    font-size: 24px!important;
-    width:220px!important;
-    padding: 0!important;
+    font-size: 24px !important;
+    width: 220px !important;
+    padding: 0 !important;
   }
 
   .date-arrows {
@@ -303,8 +315,8 @@ button:focus-visible {
 }
 
 @keyframes smooth-appear {
-  to{
+  to {
     top: 20px;
-    opacity:1;
+    opacity: 1;
   }
 }
